# libucresolv

./: CMakeLists.txt  CONTRIBUTING.md  NOTICE  README.md
include/: config.h  features.h  glibc-ctype.h  glibc-errno.h  glibc-stdio.h  glibc-stdlib.h  glibc-string.h  glibc-strings.h  glibc-time.h  glibc-unistd.h  ucresolv_log.h
include/bits/: stdlib-float.h
include/bits/types/: FILE.h  __FILE.h  clock_t.h  clockid_t.h  struct_itimerspec.h  struct_timespec.h  struct_tm.h  time_t.h  timer_t.h
include/glibc-arpa/: nameser.h
include/glibc-libio/: iogetline.c  iolibio.h  libioP.h  stdio.h
include/glibc-posix/: unistd.h
include/glibc-posix/bits/: getopt_posix.h
include/glibc-stdlib/: errno.h  grouping.c  stdlib.h  strtol_l.c  strtoull_l.c
include/glibc-string/: string.h  strings.h
include/gnu/: stubs.h
include/locale/: C-address.c  C-collate.c  C-ctype.c  C-identification.c  C-measurement.c  C-messages.c  C-monetary.c  C-name.c  C-numeric.c  C-paper.c  C-telephone.c  C-time.c  C_name.c  lc-address.c  localeinfo.h  xlocale.c
include/resolv/: ns_name.c
include/resolv/arpa/: nameser.h
include/sys/: utsname.h
include/sysdeps/generic/: _G_config.h
include/sysdeps/generic/sys/: ucontext.h
include/wcsmbs/: wchar.h
include/wcsmbs/bits/types/: mbstate_t.h
src/: CMakeLists.txt  gethostname.c  if_index.c  inet6_scopeid_pton.c  inet_addr.c  inet_mkadr.c  inet_pton.c  iofgets_u.c  mempcpy.c  netdb.h  ns_name.c  ns_parse.c  res_debug.h  res_init.c  res_mkquery.c  res_query.c  res_send.c  ucresolv-internal.h  ucresolv.h  ucresolv_log.h
